# git-metafile

./: .gitignore  .travis.yml  Cargo.toml  README.adoc
.github/workflows/: ci.yml  release.yml
script/: dist  travis-env  travis-install  utils.sh
src/: git.rs  iter_ext.rs  macros.rs  main.rs  metafile.rs
