[package]
name = "git-metafile"
version = "0.2.0"
authors = ["Jakub Jirutka <jakub@jirutka.cz>"]
description = """
A simple tool for storing and restoring files metadata (mode, owner, group) \
in a git repository. It's designed especially for versioning /etc.
"""
homepage = "https://github.com/jirutka/git-metafile"
repository = "https://github.com/jirutka/git-metafile"
readme = "README.adoc"
keywords = ["git", "cli", "tool"]
license = "MIT"

[dependencies]
argparse = "^0.2.0"
boolinator = "^2.4"
quick-error = "^1.1"
nix = "^0.8.0"

[profile.release]
lto = true
