[package]
name = "git-metafile"
version = "0.2.2"
authors = ["Jakub Jirutka <jakub@jirutka.cz>"]
edition = "2021"
description = """
A simple tool for storing and restoring files metadata (mode, owner, group) \
in a git repository. It's designed especially for versioning /etc.
"""
homepage = "https://github.com/jirutka/git-metafile"
repository = "https://github.com/jirutka/git-metafile"
license = "MIT"
keywords = ["git", "cli", "tool"]
exclude = [".*", "README.adoc"]

[dependencies]
argparse = "^0.2.0"
boolinator = "^2.4"
quick-error = "^2.0"
nix = "^0.24.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
