[package]
name = "git-metafile"
version = "0.2.3"
authors = ["Jakub Jirutka <jakub@jirutka.cz>"]
edition = "2021"
description = """
A simple tool for storing and restoring files metadata (mode, owner, group) \
in a git repository. It's designed especially for versioning /etc.
"""
homepage = "https://github.com/jirutka/git-metafile"
repository = "https://github.com/jirutka/git-metafile"
license = "MIT"
keywords = ["git", "cli", "tool"]
categories = ["command-line-utilities", "filesystem"]
exclude = [".*", "README.adoc"]

[dependencies]
argp = "^0.3.0"
quick-error = "^2.0"
nix = "^0.26.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
